--- a/recamans/recaman.ipynb
+++ b/recamans/recaman.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
     "        d.setPixelScale(2)\n",
     "        \n",
     "        # to save file\n",
-    "        d.saveSvg('./figs/recaman_circle_{}.svg'.format(n))\n",
+    "        #d.saveSvg('./figs/recaman_circle_{}.svg'.format(n))\n",
     "        d.savePng('./figs/recaman_circle_{}.png'.format(n))\n",
     "\n",
     "        # Display in iPython notebook\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
       "image/svg+xml": [
        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n",
-       "     width=\"1500.0\" height=\"600\" viewBox=\"-25 -150.0 750.0 300\">\n",
+       "     width=\"3900.0\" height=\"1560\" viewBox=\"-25 -390.0 1950.0 780\">\n",
        "<defs>\n",
        "</defs>\n",
        "<path d=\"M0.0,-6.123233995736766e-16 A5.0,5.0,0,0,0,10.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
@@ -188,19 +188,59 @@
        "<path d=\"M180.0,-1.4083438190194563e-14 A115.0,115.0,0,0,0,410.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
        "<path d=\"M420.0,-0.0 A120.0,120.0,0,0,0,180.0,-1.469576158976824e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
        "<path d=\"M170.0,-1.5308084989341916e-14 A125.0,125.0,0,0,0,420.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M430.0,-0.0 A130.0,130.0,0,0,0,170.0,-1.592040838891559e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M160.0,-1.6532731788489267e-14 A135.0,135.0,0,0,0,430.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M440.0,-0.0 A140.0,140.0,0,0,0,160.0,-1.7145055188062946e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M150.0,-1.7757378587636622e-14 A145.0,145.0,0,0,0,440.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M450.0,-0.0 A150.0,150.0,0,0,0,150.0,-1.8369701987210297e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M140.0,-1.8982025386783973e-14 A155.0,155.0,0,0,0,450.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M460.0,-0.0 A160.0,160.0,0,0,0,140.0,-1.9594348786357652e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M460.0,-2.0206672185931328e-14 A165.0,165.0,0,0,0,790.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M1130.0,-0.0 A170.0,170.0,0,0,0,790.0,-2.0818995585505004e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M780.0,-2.1431318985078682e-14 A175.0,175.0,0,0,0,1130.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M1140.0,-0.0 A180.0,180.0,0,0,0,780.0,-2.2043642384652358e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M770.0,-2.2655965784226034e-14 A185.0,185.0,0,0,0,1140.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M770.0,-0.0 A190.0,190.0,0,0,0,390.0,-2.326828918379971e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M390.0,-2.388061258337339e-14 A195.0,195.0,0,0,0,780.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M780.0,-0.0 A200.0,200.0,0,0,0,380.0,-2.4492935982947064e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M380.0,-2.510525938252074e-14 A205.0,205.0,0,0,0,790.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M790.0,-0.0 A210.0,210.0,0,0,0,370.0,-2.5717582782094416e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M370.0,-2.6329906181668095e-14 A215.0,215.0,0,0,0,800.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M800.0,-0.0 A220.0,220.0,0,0,0,360.0,-2.694222958124177e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M360.0,-2.7554552980815446e-14 A225.0,225.0,0,0,0,810.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M810.0,-0.0 A230.0,230.0,0,0,0,350.0,-2.8166876380389125e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M350.0,-2.87791997799628e-14 A235.0,235.0,0,0,0,820.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M820.0,-0.0 A240.0,240.0,0,0,0,340.0,-2.939152317953648e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M340.0,-3.0003846579110155e-14 A245.0,245.0,0,0,0,830.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M830.0,-0.0 A250.0,250.0,0,0,0,330.0,-3.061616997868383e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M330.0,-3.122849337825751e-14 A255.0,255.0,0,0,0,840.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M840.0,-0.0 A260.0,260.0,0,0,0,320.0,-3.184081677783118e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M320.0,-3.245314017740486e-14 A265.0,265.0,0,0,0,850.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M850.0,-0.0 A270.0,270.0,0,0,0,310.0,-3.3065463576978534e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M310.0,-3.3677786976552216e-14 A275.0,275.0,0,0,0,860.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M860.0,-0.0 A280.0,280.0,0,0,0,300.0,-3.429011037612589e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M300.0,-3.490243377569957e-14 A285.0,285.0,0,0,0,870.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M870.0,-0.0 A290.0,290.0,0,0,0,290.0,-3.5514757175273243e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M290.0,-3.612708057484692e-14 A295.0,295.0,0,0,0,880.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M880.0,-0.0 A300.0,300.0,0,0,0,280.0,-3.6739403974420595e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M280.0,-3.735172737399427e-14 A305.0,305.0,0,0,0,890.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M890.0,-0.0 A310.0,310.0,0,0,0,270.0,-3.7964050773567946e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M270.0,-3.857637417314163e-14 A315.0,315.0,0,0,0,900.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M900.0,-0.0 A320.0,320.0,0,0,0,260.0,-3.9188697572715304e-14\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
+       "<path d=\"M260.0,-3.980102097228898e-14 A325.0,325.0,0,0,0,910.0,-0.0\" stroke=\"black\" stroke-width=\"1\" fill=\"none\" fill-opacity=\"0.2\" />\n",
        "</svg>"
       ],
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x1125d2cc0>"
+       "<drawSvg.drawing.Drawing at 0x10dfb2f60>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "draw_recaman_circle(25)"
+    "draw_recaman_circle(65)"
    ]
   },
   {
